--- a/XFELDEVL/gpac2_service.template
+++ b/XFELDEVL/gpac2_service.template
@@ -1,11 +1,10 @@
 #------------------------------------------------------------------------------
 #-----------            GPAC2 SERVICE FUNCTIONS                ----------------
 #------------------------------------------------------------------------------
-record(longin,"$(DEV):FW-SW-CHECK"){
-   field (SCAN, "I/O Intr")
-   field (DTYP, "S7gpac")
-   field (INP,  "@$(SRV)/0x01B8 T=UINT32") 
+
+record(longout,"$(DEV):FW-SW-CHECK"){
 }
+
 
 #------------------------------------------------------------------------------
 # Hardware 
@@ -586,13 +585,13 @@ record(longin,"$(DEV):BPM2-FIRMWARE"){
 record(longin,"$(DEV):BPM2-FW-YEAR"){
   field (SCAN, "I/O Intr")
   field (DTYP, "S7gpac")
-  field (INP,  "@$(SRV)/0x0278 T=UINT32")
+  field (INP,  "@$(SRV)/0x0048 T=UINT32")
 }
 
 record(longin,"$(DEV):BPM2-FW-MONTH"){
   field (SCAN, "I/O Intr")
   field (DTYP, "S7gpac")
-  field (INP,  "@$(SRV)/0x027C T=UINT32")
+  field (INP,  "@$(SRV)/0x004C T=UINT32")
 }
 
 record(longin,"$(DEV):BPM2-FW-DAY"){
@@ -1413,6 +1412,54 @@ record(longin,"$(DEV):XFELTIM-B2-LENGTH"){
    field (INP,  "@$(SRV)/0x0210 T=UINT32") 
 }
 
+record(longin,"$(DEV):XFELTIM-B3-START"){
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (INP,  "@$(SRV)/0x01A8 T=UINT32") 
+}
+
+record(longin,"$(DEV):XFELTIM-B3-DURATION"){
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (INP,  "@$(SRV)/0x01AC T=UINT32") 
+}
+
+record(longin,"$(DEV):XFELTIM-B3-INCREMENT"){
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (INP,  "@$(SRV)/0x01B0 T=UINT32") 
+}
+
+record(longin,"$(DEV):XFELTIM-B3-LENGTH"){
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (INP,  "@$(SRV)/0x01B4 T=UINT32") 
+}
+
+record(longout, "$(DEV):XFELTIM-EVENT-0") {
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (OUT,  "@$(SRV)/0x003C:0x003C T=UINT8")
+}
+
+record(longout, "$(DEV):XFELTIM-EVENT-1") {
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (OUT,  "@$(SRV)/0x003D:0x003D T=UINT8")
+}
+
+record(longout, "$(DEV):XFELTIM-EVENT-2") {
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (OUT,  "@$(SRV)/0x003E:0x003E T=UINT8")
+}
+
+record(longout, "$(DEV):XFELTIM-EVENT-3") {
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (OUT,  "@$(SRV)/0x003F:0x003F T=UINT8")
+}
+
 #------------------------------------------------------------------------------
 # MMC readout 
 #------------------------------------------------------------------------------
@@ -1474,63 +1521,3 @@ record(longin,"$(DEV):MMC-PS-FAIL"){
    field (FLNK, "$(DEV):MMC-MAC2")
 }
 
-
-#------------------------------------------------------------------------------
-# DIO Alarms
-#------------------------------------------------------------------------------
-
-record(bo, "$(DEV):DIO-XF-ALARM") {
-  field (DTYP, "S7gpac")
-  field (OUT,  "@$(SRV)/0x0048 T=UINT8") 
-  field(ZNAM, "Off" )
-  field(ONAM, "On" )
-}
-
-record(bo, "$(DEV):DIO-XF-ALARM-TEST-1") {
-  field (DTYP, "S7gpac")
-  field (OUT,  "@$(SRV)/0x0049 T=UINT8") 
-  field(ZNAM, "Off" )
-  field(ONAM, "On" )
-}
-
-record(bo, "$(DEV):DIO-XF-ALARM-TEST-2") {
-  field (DTYP, "S7gpac")
-  field (OUT,  "@$(SRV)/0x004A T=UINT8") 
-  field(ZNAM, "Off" )
-  field(ONAM, "On" )
-}
-
-record(bo, "$(DEV):DIO-XF-ALARM-TEST-3") {
-  field (DTYP, "S7gpac")
-  field (OUT,  "@$(SRV)/0x004B T=UINT8") 
-  field(ZNAM, "Off" )
-  field(ONAM, "On" )
-}
-
-record(bo, "$(DEV):DIO-RESET") {
-  field (DTYP, "S7gpac")
-  field (OUT,  "@$(SRV)/0x004C T=UINT8") 
-  field(ZNAM, "Off" )
-  field(ONAM, "On" )
-}
-
-record(bo, "$(DEV):DIO-SLEEP-MODE") {
-  field (DTYP, "S7gpac")
-  field (OUT,  "@$(SRV)/0x004D T=UINT8") 
-  field(ZNAM, "Off" )
-  field(ONAM, "On" )
-}
-
-# record(bo, "$(DEV):DIO-SF-ALARM-2") {
-#   field (DTYP, "S7gpac")
-#   field (OUT,  "@$(SRV)/0x004E T=UINT8") 
-#   field(ZNAM, "Off" )
-#   field(ONAM, "On" )
-# }
-# 
-# record(bo, "$(DEV):DIO-SF-ALARM-1") {
-#   field (DTYP, "S7gpac")
-#   field (OUT,  "@$(SRV)/0x004F T=UINT8") 
-#   field(ZNAM, "Off" )
-#   field(ONAM, "On" )
-# }
