--- a/XFELIBFB/GPAC_BPM_SMP.template
+++ b/XFELIBFB/GPAC_BPM_SMP.template
@@ -1512,6 +1512,13 @@ record(mbbo, "$(DEV):REF-GAIN-FB-ON") {
    field(DTYP, "S7gpac")
    field(OUT,  "@$(SRV)/0x00E8:0x00E8 T=UINT32")
    field(SCAN, "I/O Intr")
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
    field(ZRST, "Off" )
    field(ONST, "On" )
    field(TWST, "Off" )
@@ -1577,6 +1584,13 @@ record(mbbo, "$(DEV):X-GAIN-FB-ON") {
    field(DTYP, "S7gpac")
    field(OUT,  "@$(SRV)/0x00EC:0x00EC T=UINT32")
    field(SCAN, "I/O Intr")
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
    field(ZRST, "Off" )
    field(ONST, "On" )
    field(TWST, "Off" )
@@ -1643,6 +1657,13 @@ record(mbbo, "$(DEV):Y-GAIN-FB-ON") {
    field(DTYP, "S7gpac")
    field(OUT,  "@$(SRV)/0x00F0:0x00F0 T=UINT32")
    field(SCAN, "I/O Intr")
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
    field(ZRST, "Off" )
    field(ONST, "On" )
    field(TWST, "Off" )
@@ -1718,8 +1739,6 @@ record(seq, "$(DEV):ADC-DATA-CALC") {
    field(LNK9, "$(DEV):#AMP-Y-R-CALC-AVG-RMS PP")
    field(LNKA, "$(DEV):#PH-Y-R-CALC-AVG-RMS PP")
 }
-
-
 
 record(longin, "$(DEV):X2TIM-DEST-BUNCH-MASK-RD") {
    field(DESC, "bunch destination mask")
