--- a/XFELBPM/GPAC_BPM_SMP.template
+++ b/XFELBPM/GPAC_BPM_SMP.template
@@ -1507,13 +1507,22 @@ record(ai, "$(DEV):PH-REF-FB-VAL") {
 #------------------------------------------------------------------------------
 # Gain feedback
 #------------------------------------------------------------------------------
-record(bo, "$(DEV):REF-GAIN-FB-ON") {
+record(mbbo, "$(DEV):REF-GAIN-FB-ON") {
    field(DESC, "REF gain fb on/off")
    field(DTYP, "S7gpac")
    field(OUT,  "@$(SRV)/0x00E8:0x00E8 T=UINT32")
    field(SCAN, "I/O Intr")
-   field(ZNAM, "Off" )
-   field(ONAM, "On" )
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
+   field(ZRST, "Off" )
+   field(ONST, "On" )
+   field(TWST, "Off" )
+   field(THST, "On/Dest" )
 }
 
 record(ao, "$(DEV):REF-GAIN-FB-MAX") {
@@ -1570,13 +1579,22 @@ record(ai, "$(DEV):REF-GAIN-FB-VAL") {
    field(SCAN, "I/O Intr")
 }
 
-record(bo, "$(DEV):X-GAIN-FB-ON") {
+record(mbbo, "$(DEV):X-GAIN-FB-ON") {
    field(DESC, "X gain fb on/off")
    field(DTYP, "S7gpac")
    field(OUT,  "@$(SRV)/0x00EC:0x00EC T=UINT32")
    field(SCAN, "I/O Intr")
-   field(ZNAM, "Off" )
-   field(ONAM, "On" )
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
+   field(ZRST, "Off" )
+   field(ONST, "On" )
+   field(TWST, "Off" )
+   field(THST, "On/Dest" )
 }
 
 record(ao, "$(DEV):X-GAIN-FB-MAX") {
@@ -1634,14 +1652,24 @@ record(ai, "$(DEV):X-GAIN-FB-VAL") {
    field(SCAN, "I/O Intr")
 }
 
-record(bo, "$(DEV):Y-GAIN-FB-ON") {
+record(mbbo, "$(DEV):Y-GAIN-FB-ON") {
    field(DESC, "Y gain fb on/off")
    field(DTYP, "S7gpac")
    field(OUT,  "@$(SRV)/0x00F0:0x00F0 T=UINT32")
    field(SCAN, "I/O Intr")
-   field(ZNAM, "Off" )
-   field(ONAM, "On" )
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
+   field(ZRST, "Off" )
+   field(ONST, "On" )
+   field(TWST, "Off" )
+   field(THST, "On/Dest" )
 }
+
 
 record(ao, "$(DEV):Y-GAIN-FB-MAX") {
    field(DESC, "Y gain fb max")
