--- a/XFELBPM/EXFEL_ReCAV_BPM_SMP.template
+++ b/XFELBPM/EXFEL_ReCAV_BPM_SMP.template
@@ -1560,20 +1560,12 @@ record(seq, "$(DEV):ADC-DATA-CALC") {
    field(LNKA, "$(DEV):#PH-Y-R-CALC-AVG-RMS PP")
 }
 
-record(longin, "$(DEV):X2TIM-DEST-BUNCH-MASK-RD") {
-   field(DESC, "bunch destination mask")
-   field(DTYP, "S7gpac")
-   field(INP,  "@$(SRV)/0x0218 T=UINT32")
-   field(SCAN, "I/O Intr")
-}
-
-
 record(longout, "$(DEV):X2TIM-DEST-BUNCH-MASK") {
-   field(DESC, "bunch destination mask")
-   field(DTYP, "S7gpac")
-   field(OUT,  "@$(SRV)/0x0218 T=UINT32")
-   field(SCAN, "I/O Intr")
-}
+    field(DESC, "bunch destination mask")
+    field(DTYP, "S7gpac")
+    field(OUT,  "@$(SRV)/0x0218:0x0218 T=UINT32")
+    field(SCAN, "I/O Intr")
+ }
 
 record(bi, "$(DEV):X2TIM-DEST-BUNCH-FOUND-RD") {
    field(DESC, "bunch destination mask")
