--- a/XFELBPM/but_serv_s7gpac.template
+++ b/XFELBPM/but_serv_s7gpac.template
@@ -994,3 +994,19 @@ record(stringout,"$(DEV):DEV-NAME"){
   field(SCAN, "I/O Intr")
 }
 
+record(longout, "$(DEV):X2TIM-DEST-BUNCH-MASK") {
+    field(DESC, "bunch destination mask")
+    field(DTYP, "S7gpac")
+    field(OUT,  "@$(SRV)/0x0084:0x0084 T=UINT32")
+    field(SCAN, "I/O Intr")
+ }
+
+record(bi, "$(DEV):X2TIM-DEST-BUNCH-FOUND-RD") {
+   field(DESC, "bunch found")
+   field(DTYP, "S7gpac")
+   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1A60 T=UINT32")
+   field(SCAN, "I/O Intr")
+   field(ZNAM, "Bunch not found" )
+   field(ONAM, "Bunch found" )
+}
+
