Fixed Re-entrant configuration

--- a/XFELDEVL/EXFEL_ReCAV_BPM_SMP.template
+++ b/XFELDEVL/EXFEL_ReCAV_BPM_SMP.template
@@ -1494,14 +1494,24 @@ record(ai, "$(DEV):PH-REF-FB-VAL") {
 #------------------------------------------------------------------------------
 # Gain feedback
 #------------------------------------------------------------------------------
-record(bo, "$(DEV):REF-GAIN-FB-ON") {
+record(mbbo, "$(DEV):REF-GAIN-FB-ON") {
    field(DESC, "REF gain fb on/off")
-  field(DTYP, "S7gpac")
-  field(OUT,  "@$(SRV)/0x00E8:0x00E8 T=UINT32")
-  field(SCAN, "I/O Intr")
-   field(ZNAM, "Off" )
-   field(ONAM, "On" )
+   field(DTYP, "S7gpac")
+   field(OUT,  "@$(SRV)/0x00E8:0x00E8 T=UINT32")
+   field(SCAN, "I/O Intr")
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
+   field(ZRST, "Off" )
+   field(ONST, "On" )
+   field(TWST, "Off" )
+   field(THST, "On/Dest" )
 }
+
 
 record(ai, "$(DEV):REF-GAIN-FB-VAL") {
    field(DESC, "REF gain fb")
@@ -1510,13 +1520,22 @@ record(ai, "$(DEV):REF-GAIN-FB-VAL") {
   field(SCAN, "I/O Intr")
 }
 
-record(bo, "$(DEV):XY-GAIN-FB-ON") {
-   field(DESC, "X gain fb on/off")
-  field(DTYP, "S7gpac")
-  field(OUT,  "@$(SRV)/0x00EC:0x00EC T=UINT32")
-  field(SCAN, "I/O Intr")
-   field(ZNAM, "Off" )
-   field(ONAM, "On" )
+record(mbbo, "$(DEV):XY-GAIN-FB-ON") {
+   field(DESC, "XY gain fb on/off")
+   field(DTYP, "S7gpac")
+   field(OUT,  "@$(SRV)/0x00EC:0x00EC T=UINT32")
+   field(SCAN, "I/O Intr")
+   field(NOBT, "2")
+   field(SHFT, "0")
+   field(VAL,  "3")
+   field(ZRVL, "0" )
+   field(ONVL, "1" )
+   field(TWVL, "2" )
+   field(THVL, "3" )
+   field(ZRST, "Off" )
+   field(ONST, "On" )
+   field(TWST, "Off" )
+   field(THST, "On/Dest" )
 }
 
 record(ai, "$(DEV):XY-GAIN-FB-VAL") {
@@ -1540,3 +1559,21 @@ record(seq, "$(DEV):ADC-DATA-CALC") {
    field(LNK9, "$(DEV):#AMP-Y-R-CALC-AVG-RMS PP")
    field(LNKA, "$(DEV):#PH-Y-R-CALC-AVG-RMS PP")
 }
+
+record(longout, "$(DEV):X2TIM-DEST-BUNCH-MASK") {
+    field(DESC, "bunch destination mask")
+    field(DTYP, "S7gpac")
+    field(OUT,  "@$(SRV)/0x0218:0x0218 T=UINT32")
+    field(SCAN, "I/O Intr")
+ }
+
+record(bi, "$(DEV):X2TIM-DEST-BUNCH-FOUND-RD") {
+   field(DESC, "bunch destination mask")
+   field(DTYP, "S7gpac")
+   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0558 T=UINT32")
+   field(SCAN, "I/O Intr")
+   field(ZNAM, "Bunch not found" )
+   field(ONAM, "Bunch found" )
+}
+
+
